Update LodestoneBlockEntityInventory.java